# codeforge

./: .env.example  .gitignore  README.md  debate.py  docker-compose.yml  main.py  pyproject.toml  router.py  state.py  tools.py  workflow_engine.py
agents/: agent_definitions.py  coder_agent.py  deployer_agent.py  planner_agent.py  researcher_agent.py  tester_agent.py
api/routes/: __init__.py  health.py  healthCheck.js  index.js
docs/: prd.md
docs/adrs/: ADR-001-multi-agent-framework-selection.md  ADR-002-database-and-memory-system.md  ADR-003-tool-integration-protocol.md  ADR-004-orchestration-and-task-management.md  ADR-005-caching-and-shared-context-layer.md  ADR-006-sota-graphrag-implementation.md  ADR-007-web-search-integration.md  ADR-008-multi-model-routing.md  ADR-009-debate-agents.md  ADR-010-task-management-system.md  ADR-011-multi-modal-support.md  ADR-012-advanced-embeddings.md  ADR-013-extended-debate.md  ADR-014-federated-basics.md  ADR-015-enhanced-scalability.md
tests/: test_debate.py  test_health.py  test_main.py  test_tools.py
tests/api/: healthCheck.test.js
tools/: bash_tool.py  file_tools.py  git_tools.py  quality_tools.py  search_tools.py  shipit_tools.py
workflows/: feature_implementation.yaml
